--- a/home1.html
+++ b/home1.html
@@ -30,7 +30,7 @@ require 'condb.php';
     <div>
     <div class="bigside">
         <div class="container my-5" style="margin:66px;">
-            <h1>THIS IS YOOUR HOMEPAGE</h1>
+            <h1>THIS IS YOOUR HOMEPAGE!!!</h1>
         </div>
 
     </div>
