--- a/home1.html
+++ b/home1.html
@@ -21,7 +21,7 @@ require 'condb.php';
                 <li><a href="">PRODUCT</a></li>
                 <li><a href="">INVENTORY</a></li>
                 <li><a href="">EMPLOYEE</a></li>
-                <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
+                <li><a href="/kaffemariadb/KaffeMariaPOS/supplier.php">SUPPLIER</a></li>
                 <li><a href="">LOGOUT</a></li>
 
             </ul>
