--- a/home1.html
+++ b/home1.html
@@ -17,11 +17,11 @@ require 'condb.php';
     <div class="sidebar">
         <div class="buttonsss">
             <ul>
-                <li><a href="/kaffemariadb/KaffeMariaPOS/home1.html">HOME</a></li>
+                <li><a href="/kaffemariadb/home1.html">HOME</a></li>
                 <li><a href="">PRODUCT</a></li>
                 <li><a href="">INVENTORY</a></li>
                 <li><a href="">EMPLOYEE</a></li>
-                <li><a href="/kaffemariadb/KaffeMariaPOS/supplier.php">SUPPLIER</a></li>
+                <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
                 <li><a href="">LOGOUT</a></li>
 
             </ul>
