--- a/home1.html
+++ b/home1.html
@@ -19,7 +19,7 @@ require 'condb.php';
             <ul>
                 <li><a href="/kaffemariadb/home1.html">HOME</a></li>
                 <li><a href="">PRODUCT</a></li>
-                <li><a href="">INVENTORY</a></li>
+                <li><a href="/kaffemariadb/inventory.php">INVENTORY</a></li>
                 <li><a href="">EMPLOYEE</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
                 <li><a href="">LOGOUT</a></li>
