--- a/home1.html
+++ b/home1.html
@@ -22,7 +22,7 @@ require 'condb.php';
                 <li><a href="/kaffemariadb/inventory.php">INVENTORY</a></li>
                 <li><a href="">EMPLOYEE</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
-                <li><a href="">LOGOUT</a></li>
+                <li><a href="/kaffemariadb/logout.php">LOGOUT</a></li>
 
             </ul>
         </div>
