--- a/home1.html
+++ b/home1.html
@@ -18,7 +18,7 @@ require 'condb.php';
         <div class="buttonsss">
             <ul>
                 <li><a href="/kaffemariadb/home1.html">HOME</a></li>
-                <li><a href="">PRODUCT</a></li>
+                <li><a href="/kaffemariadb/bev.php">BEVERAGE</a></li>
                 <li><a href="/kaffemariadb/inventory.php">INVENTORY</a></li>
                 <li><a href="/kaffemariadb/staff.php">EMPLOYEE</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
