--- a/home1.html
+++ b/home1.html
@@ -25,6 +25,8 @@ require 'condb.php';
                 <li><a href="">SALES</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
                 <li><a href="/kaffemariadb/logout.php">LOGOUT</a></li>
+                <li><a href="/kaffemariadb/manage_accounts.php">MANAGE ACCOUNTS</a></li>
+
 
             </ul>
         </div>
